# CPP_ImageManipulationProject

./: .gitignore  CMakeLists.txt  ReadMe.md
Src/: BMPImage.cpp  BMPImage.h  Pixel.cpp  Pixel.h  main.cpp
